--- a/themes/blockwise-theme/sass/_globals.scss
+++ b/themes/blockwise-theme/sass/_globals.scss
@@ -5,8 +5,9 @@
   max-width: $desktop-width;
   margin: 0 auto;
 }
-.site-content {
+body {
   margin-top: 5.5rem;
+  background-position-y: 5.5rem;
   background-size: 100vw;
   background-repeat: no-repeat;
 }
