--- a/themes/blockwise-theme/sass/_membership-page.scss
+++ b/themes/blockwise-theme/sass/_membership-page.scss
@@ -4,9 +4,9 @@
 
 .page-template-membership {
   text-align: center;
-  .site-content {
-    background-image: url('../../assets/images/membership-banner.jpg');
-  }
+
+  background-image: url('../../assets/images/membership-banner.jpg');
+
   // position: relative;
   ul,
   li {
