--- a/themes/blockwise-theme/sass/_posts-archive.scss
+++ b/themes/blockwise-theme/sass/_posts-archive.scss
@@ -3,9 +3,7 @@
 --------------------------------------------------------------*/
 
 .blog {
-  .site-content {
-    background-image: url('../../assets/images/news-banner.jpg');
-  }
+  background-image: url('../../assets/images/news-banner.jpg');
 }
 
 .archive-posts {
